# UbikEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
sandbox/: .gitignore  imgui.ini  log  test.entity  test.entity copy  test1.entity
sandbox/assets/scenes/: start_scene.entity
sandbox/assets/shaders/: EditorGrid.shader  GUIShader.frag  GUIShader.shader  TestShader.shader  TestShader.vert
sandbox/assets/shaders/EditorGrid.shader.buffers/: 2244167183  654707846
sandbox/assets/shaders/EditorGrid.shader.meta.buffers/: 8418152768671971451
sandbox/assets/shaders/GUIShader.shader.buffers/: 4134458087
sandbox/assets/shaders/TestShader.shader.buffers/: 3303091832
sandbox/assets/shaders/TestShader.shader.meta.buffers/: 7529058258386432189
sandbox/assets/textures/container.jpg.meta.buffers/: 1395916521  1663553831
sandbox/assets/textures/seal.png.meta.buffers/: 3055838060  4948704172885240547
sandbox/schema/: camera_component.schema  custom_component.schema  link_component.schema  mesh_component.schema  test_component.schema  transform_component.schema
sandbox/schemas/: mesh_component.schema  transform_component.schema
sandbox/src/: editor_plugin.cpp  editor_plugin.h  load_libraries.cpp  sandbox.cpp  sandbox.h  sandbox_plugin.cpp  sandbox_plugin.h  spin_plugin.cpp  spin_plugin.h
src/base/: allocator.cpp  allocator.h  color.cpp  color.h  crc32.h  cursor.h  delegate.h  detected.h  event.h  flags.h  guid.cpp  guid.h  int_set.h  intset.h  iterator_range.h  key_codes.h  log.cpp  log.h  macro.h  math.cpp  math.h  memory.h  mouse_codes.h  profiler.cpp  profiler.h  sparse_set.h  timer.h  transform_iterator.h  type_name.h  window_event.h
src/core/: application.cpp  application.h  asset_repository.cpp  asset_repository.h  assets_filesystem.cpp  assets_filesystem.h  component_loader.h  dcc_asset.cpp  dcc_asset.h  ecs.cpp  ecs.h  engine.cpp  engine.h  engine_events.cpp  engine_events.h  engine_i.h  game.cpp  input_system.cpp  input_system.h  obj_import.h  plugins.cpp  plugins.h  plugins_registry.cpp  plugins_registry.h  register_components.cpp  register_components.h  render_pipeline.cpp  render_pipeline.h  render_texture.cpp  render_texture.h  renderer.cpp  renderer.h  schema.cpp  schema.h  serialization.h  simulation.h  simulation_events.h  systems_registry.cpp  systems_registry.h  texture.cpp  (+10 more)
src/core/assets/: asset.cpp  asset.h  asset_compiler.h  asset_handle.cpp  asset_handle.h  asset_loader.h  assets.cpp  assets.h  assets_registry.cpp  filesystem_provider.cpp  filesystem_provider.h  resource_compiler.cpp  resource_compiler.h  resources.cpp  resources.h  shader.cpp  shader.h  texture.cpp  texture.h
src/core/components/: camera_component.cpp  camera_component.h  component.h  mesh_component.cpp  mesh_component.h  transform_component.cpp  transform_component.h  version_component.h
src/core/meta/: interface.h  interface_registry.cpp  interface_registry.h  registration.cpp  registration.h  schema.cpp  schema.h  type.h  type_info.cpp  type_info.h
src/editor/: editor.cpp  editor_gui.cpp  editor_gui.h  editor_gui_i.h  editor_tab.cpp  editor_tab.h  editor_tab_manager.cpp  editor_tab_manager.h  gui.cpp  gui.h  library_loader.cpp  library_loader.h  library_registry.cpp  library_registry.h
src/editor/gui/: gui.cpp  gui.h  imgui_renderer.cpp  imgui_renderer.h
src/editor/plugins/: entity_asset_editor.cpp  entity_asset_editor.h  file_browser_gui.cpp  file_browser_gui.h  game_view_gui.cpp  game_view_gui.h  scene_view_gui.cpp  scene_view_gui.h
src/editor/tools/: asset_compiler.cpp  asset_compiler.h  resource_compiler.cpp  resource_compiler.h
src/experimental/: assets.cpp  assets.h  resources.h
src/gfx/: command_buffers.cpp  command_buffers.h  gfx.cpp  gfx.h  gfx_config.h  gfx_details.cpp  gfx_details.h  render_context.h  render_context_opengl.cpp  render_context_opengl.h  renderer_api.h  renderer_api_gl.cpp  renderer_api_gl.h  shader.cpp  shader.h  shader_compiler.h  shader_compiler_opengl.h  shader_repository.cpp  shader_repository.h
src/gfx/experimental/: asset_repository.cpp  asset_repository.h  camera_component.h  command_buffers.cpp  command_buffers.h  experimental.cpp  gfx.h  gui.cpp  gui.h  mesh_component.cpp  mesh_component.h  opengl_shader_desc.h  render_context.cpp  render_context.h  render_context_opengl.cpp  render_context_opengl.h  render_pipeline.cpp  render_pipeline.h  render_target_buffer.cpp  render_target_buffer.h  renderer.cpp  renderer.h  resources_registry.cpp  resources_registry.h  shader.cpp  shader.frag.inl  shader.h  shader.i  shader_compiler.h  shader_compiler_opengl.cpp  shader_compiler_opengl.h  shader_repository.cpp  shader_repository.h  stream_buffers.cpp  stream_buffers.h  systems_registry.h  texture.cpp  texture.h  texture_compiler.cpp  texture_compiler.h  (+2 more)
src/platform/: file_system.cpp  file_system.h  file_watcher.cpp  file_watcher.h  os.cpp  os.h  window.cpp  window.h
